--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -4,7 +4,7 @@ import Home from '../components/Home.jsx';
 import '@/styles/globals.css'
 ---
 
-<Layout title="Electron Gemma-3n Webcam Agents">
+<Layout title="Gemma 3n Webcam footage analyzer">
 	<main>
 		<Home client:only="react" />
 	</main>
